# hermes-hud

./: .gitignore  CHANGELOG.md  CLAUDE.md  pyproject.toml
hermes_hud/: __init__.py  hud.py  models.py  snapshot.py
hermes_hud/collectors/: agents.py  health.py  patterns.py  profiles.py  sessions.py
hermes_hud/tui/: __init__.py  app.py
hermes_hud/tui/screens/: __init__.py  boot.py  dashboard.py
hermes_hud/tui/widgets/: __init__.py  corrections_log.py  cron_monitor.py  growth_tracker.py  health_check.py  project_tracker.py
hermes_hud/web/: server.py
hermes_hud/web/templates/: dashboard.html
hermes_hud/widgets/: __init__.py  agents_panel.py  cron_panel.py  health_panel.py  overview.py  patterns_panel.py  profiles_panel.py  sessions_panel.py
