[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tribe-hud"
version = "1.0.0"
description = "Tribe HUD — 500 Aasta Plaani agent consciousness monitor & TUI dashboard"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors=[
    {name = "Sniffmarble / Tribe"},
]
keywords = ["ai", "agent", "dashboard", "tui", "terminal", "neofetch", "hermes", "tribe"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "textual>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
neofetch = ["pyfiglet>=1.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.urls]
Homepage = "https://github.com/Sniffserver/hermes-hud"
Repository = "https://github.com/Sniffserver/hermes-hud"
Issues = "https://github.com/Sniffserver/hermes-hud/issues"

[project.scripts]
hermes-hud = "hermes_hud.hud:main"
tribe-hud = "hermes_hud.tui.app:main"

[tool.setuptools.packages.find]
include = ["hermes_hud*"]
